# n8n-ai-agent

./: .gitignore  ai-agent.md  config.yaml  config.yml  demo-mcp-test-trigger.json  deployment.yml  docker-compose.yml  docker-setup.md  init.sql  justfile  mcp-test-trigger.json  nx-executor.json  remote-monitor.json  requirements.txt  setup-python-env.bat  setup-python-env.sh  ssh-n8n-workflow.json  temp-converter.json  xrequest.http
config/mqtt/: mosquitto.conf
docs/: docker-setup.md  force-ai-tool-usage-strategies.md  mcp-server.md  mqtt-setup.md  n8n-mcp-integration.md  python-environment-setup.md
docs/n8n-workflows/: README.md  base64-decoder.json  base64-encoder.json  base64-pipeline.json
mcp-server/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  config.yml  crypter_original.py  dev.py  docker-compose.yml  docker-entrypoint.sh  mcp-server-project.prompt.md  pyproject.toml  quickstart.bat  quickstart.sh  test_mcp_live.py
mcp-server/n8n_mcp_server/: __init__.py  cli.py  config.py  main.py
mcp-server/n8n_mcp_server/api/: __init__.py
mcp-server/n8n_mcp_server/handlers/: __init__.py  base_handler.py
mcp-server/n8n_mcp_server/tools/: __init__.py  base64_tool.py  example_tool.py
mcp-server/n8n_mcp_server/utils/: __init__.py  helpers.py  logging.py
mcp-server/scripts/: dev.py  lint.py  test.py
mcp-server/src/: __init__.py  config.py  fastapi_server.py  log_middleware.py  main.py  server.py  simple_server.py  utils.py
mcp-server/src/mcp_store/resources/: status.py  tools_list.py  version.py
mcp-server/src/mcp_store/tools/: ScriptExecutor.py  calculator.py  crypto.py  tools_list.py
mcp-server/tests/: conftest.py  test_calculator.py  test_crypto.py  test_fastmcp.py  test_runner.py  test_server_integration.py
mcp-server/tests/test_handlers/: __init__.py  test_base_handler.py
mcp-server/tests/test_tools/: __init__.py  test_base64_tool.py
n8n-node-jsons/0-main-workflow/: 0-main-workflow.json
n8n-node-jsons/1-tasks-extraction-workflow/: 1-tasks-extraction-workflow-final.json  1-tasks-extraction-workflow-subworkflow.json
n8n-node-jsons/1-tasks-extractor-workflow/: 1-tasks-extractor-subworkflow.json
n8n-node-jsons/1-tasks-planner-workflow/: 1-tasks-planner-subworkflow.json
n8n-node-jsons/2-task-execution-subworkflow/: 2-task-executor-subworkflow.json
n8n-node-jsons/2-task-executor-subworkflow/: 2-task-executor-subworkflow.json
n8n-node-jsons/crypto-executor-workflow/: crypto-executor-workflow.json
n8n-node-jsons/mcp-crypto-calc-workflow/: mcp-crypto-calc-workflow.json
n8n-node-jsons/mcp-streamable-workflow/: mcp-streamable-workflow.json
n8n-node-jsons/mcp-tool-service-triggers/: calculator-service-trigger.json  encrypt-decrypt-service-trigger.json  list-tool-service-trigger.json
n8n-node-jsons/remote-ssh-agent-workflow/: _ssh-n8n-workflow.json  remote-monitor-workflow.json
n8n-node-jsons/task-builder-workflow/: README.md  configuration.md  examples-and-tests.md  task-builder-workflow.backup.json  task-builder-workflow.json  task-execution-flow-fix.md  task-planner-test.json  test-workflow.json  test-workflow.prompt-based.json  test-workflow.two-stage.json  troubleshooting.md
prompts/: ai-agent.md
study/: kilo_code_task_multi_add_encrypt.md
tests/: sample-chat-requests.md
