[project]
name = "mcp-crypto-server"
version = "0.1.0"
description = "MCP Server with FastMCP HTTP transport and crypto tools"
authors = [{name = "DevOpsNextGenX", email = "devopsnextgenx@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pyyaml",
    "psutil",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
mcp-crypto-server = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
